<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/FechaNacimineto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/nacimiento"
        android:textAlignment="gravity"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:layout_marginTop="6dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/dateText"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nacimientoHint"
        android:inputType="date"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/FechaNacimineto"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sexo"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/dateText"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <CheckBox
        android:id="@+id/chica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:checked="false"
        android:text="@string/niña"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexo" />

    <CheckBox
        android:id="@+id/chico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/niño"
        app:layout_constraintLeft_toRightOf="@+id/chica"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/sexo" />

    <TextView
        android:id="@+id/Nombre"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nombre"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/chico"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText

        android:id="@+id/nombreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="Pulsa para Introducir el nombre"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nombre" />



    <Button
        android:id="@+id/bCalcula"
        android:layout_width="149dp"
        android:layout_height="42dp"
        android:text="Guardar"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/nombreText"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>